[tool.poetry]
name = "iec-api"
version = "0.3.0"
description = "A Python wrapper for Israel Electric Company API"
authors = ["GuyKh"]
license = "MIT"
readme = "README.md"
maintainers = [
    "Guy Khmelnitsky <guykhmel@gmail.com>",
]
repository = "https://github.com/GuyKh/py-iec-api"
keywords = ["python", "poetry", "api", "iec", "israel", "electric"]

[tool.poetry.dependencies]
python = "^3.10"
mashumaro = "^3.13"
pyjwt = "^2.8.0"
requests = "^2.31.0"
pkce = "^1.0.3"
aiohttp = "^3.9.1"
aiofiles = "^23.2.1"
pytz = "^2024.1"

[tool.poetry.dev-dependencies]
pytest = "8.2.0"
pytest-cov = "^5.0.0"
ruff = "^0.4.1"
pre-commit = "^3.2.2"

[tool.pytest.ini_options]
testpaths = ["tests",]

[tool.coverage.run]
branch = true
omit = ["*/tests/*", "example.py"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "W", "I", "N"]
target-version = "py311"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
